kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: myapp  # Change this line to match your Deployment's labels
  ports:
    - protocol: TCP
      port: 80
      targetPort: 81
  # type: NodePort
